--- a/css/style.css
+++ b/css/style.css
@@ -2,42 +2,43 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+body{
+    background-color: white;
     font-family: 'Fredoka', sans-serif;
 }
 
 .container{
     margin: 0 auto;
-    width: 1200px;
-    
-    text-align: center;
-    background-color: white;
+    max-width: 1200px;
 }
 
 header{
-    color:rgb(212, 10, 78)
+    color:rgb(212, 10, 78);
+    text-align: center;
 }
 
 .intro{
     margin-top: 30px;
+    text-align: center;
 }
 
 .row{
     margin-top: 20px;
+    /*text-align: justify;*/
+    color: white;
 }
 
 .column{
-    text-align: justify;
     display: inline-block;
-    width: calc(100% / 3);
-    height: 90px;
-    background-color: rgb(28, 3, 51);
-    color: white;
-    padding: 5px;
-    line-height: 28px;
+    width: 400px;
+    background-color: rgb(40, 0, 77);
+    line-height: 35px;
 }
 
 .left{
-    max-height: 100%;
+    max-width: 30%;
     float: left;
 }
 
@@ -47,7 +48,8 @@ header{
     margin-top: 5px;
 }
 
-.clearfix::after{
+.clearfix::after,
+.row::after{
     content: '';
     clear: both;
     display: block;
